Adds authorization with JWT
